novo site teste

--- a/index.html
+++ b/index.html
@@ -3,69 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Educação Antirracista</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Educação Antirracista</title>
 </head>
 <body>
     <header>
-        <h1>Educação Antirracista</h1>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#videos">Vídeos</a></li>
-                <li><a href="#livros">Livros</a></li>
-                <li><a href="#termos">Termos a Evitar</a></li>
-                <li><a href="#cotas">História das Cotas</a></li>
-            </ul>
-        </nav>
+        <h1>Numa sociedade racista, não basta não ser racista. É necessário ser antirracista</h1>
     </header>
-    <main>
-        <section id="sobre">
-            <h2>Sobre o Tema</h2>
-            <p>A educação antirracista promove igualdade e combate o racismo por meio da conscientização. É essencial para construir uma sociedade mais justa.</p>
-        </section>
 
-        <section id="videos">
-            <h2>Vídeos Recomendados</h2>
-            <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/7yYbV6N4p9I" title="Educação Antirracista na Prática" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/OY6ZC1aM8hQ" title="O Que É Racismo Estrutural?" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/c6a7v0pX2s4" title="Desconstruindo Preconceitos" allowfullscreen></iframe>
-                <iframe src="https://www.youtube.com/embed/KA1eB2L6Ym4" title="Cotas e Igualdade" allowfullscreen></iframe>
-            </div>
-        </section>
+    <section class="resumo">
+        <h2>Resumo</h2>
+        <p>A luta antirracista é fundamental para a construção de uma sociedade mais justa e igualitária. Educar-se sobre racismo e suas manifestações é um passo primordial para desconstruir preconceitos e promover a inclusão. O racismo não é apenas uma questão individual, mas uma estrutura enraizada que demanda ações coletivas e conscientes. Nesse contexto, a educação antirracista se apresenta como uma ferramenta poderosa para transformar mentalidades e promover a equidade racial.</p>
+    </section>
 
-        <section id="livros">
-            <h2>Livros Recomendados</h2>
-            <ul>
-                <li><em>Pequeno Manual Antirracista</em> - Djamila Ribeiro</li>
-                <li><em>O Genocídio do Negro Brasileiro</em> - Abdias do Nascimento</li>
-                <li><em>Quarto de Despejo</em> - Carolina Maria de Jesus</li>
-                <li><em>Racismo Estrutural</em> - Silvio Almeida</li>
-            </ul>
-        </section>
+    <section class="video-principal">
+        <h2>Assista ao vídeo</h2>
+        <iframe src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
+        <p>Este vídeo aborda a importância da educação antirracista e os impactos positivos que ela pode ter na sociedade. Através de relatos e discussões, somos convidados a refletir sobre nossas próprias atitudes e a necessidade de promover mudanças efetivas.</p>
+    </section>
 
-        <section id="termos">
-            <h2>Termos Racistas a Evitar</h2>
-            <ul>
-                <li>"Cabelo ruim" - Use "cabelo crespo" ou "cabelo afro"</li>
-                <li>"Criado-mudo" - Use "mesa de cabeceira"</li>
-                <li>"Denegrir" - Use "difamar" ou "prejudicar"</li>
-                <li>"Mulato" - Use "pardo"</li>
-                <li>"Escravo" - Use "pessoa escravizada"</li>
-                <li>"Moreno" - Use "negro" ou "afrodescendente" quando apropriado</li>
-            </ul>
-            <p>Esses termos têm conotações racistas e devem ser substituídos por alternativas respeitosas e inclusivas.</p>
-        </section>
+    <section class="video-secundarios">
+        <h2>Fique por dentro</h2>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </section>
 
-        <section id="cotas">
-            <h2>História das Cotas</h2>
-            <p>As políticas de cotas foram implementadas para corrigir desigualdades históricas e estruturais. Elas visam garantir acesso igualitário a oportunidades educacionais e de trabalho para grupos marginalizados.</p>
-            <p>Ainda são necessárias porque o racismo estrutural continua a afetar a vida de muitas pessoas. As cotas buscam criar um campo de atuação mais justo e igualitário.</p>
-        </section>
-    </main>
+    <section class="cuidado-palavras">
+        <h2>Cuidado com as palavras</h2>
+        <ul>
+            <li>Negro -> Afrodescendente</li>
+            <li>Mulato -> Mestiço</li>
+            <li>Preto -> Pessoa negra</li>
+            <li>Escravo -> Pessoa escravizada</li>
+            <li>Raça inferior -> Raça humana</li>
+            <li>Branquitude -> Privilegiado</li>
+            <li>Cor da pele -> Identidade racial</li>
+            <li>Estereótipos -> Generalizações</li>
+            <li>Segregação -> Inclusão</li>
+            <li>Racismo cultural -> Diversidade cultural</li>
+        </ul>
+    </section>
+
+    <section class="povo-preto">
+        <h2>Povo preto no poder</h2>
+        <p>O povo preto tem uma longa história de resistência e conquistas. Desde a luta contra a escravidão até a atualidade, a presença e a contribuição dos afrodescendentes são fundamentais na construção da identidade brasileira. As vitórias no campo político, artístico e social são marcos que evidenciam a força e a resiliência dessa comunidade. Com a luta por igualdade, os negros têm conquistado espaços importantes em diversas áreas, rompendo barreiras e desafiando estereótipos. É crucial reconhecer e valorizar essas conquistas, que vão muito além da luta antirracista, mas que se entrelaçam com a busca por justiça social e direitos humanos.</p>
+    </section>
+
+    <section class="livros">
+        <h2>Expanda seu conhecimento</h2>
+        <div class="livro">
+            <h3>Pequeno Manual Antirracista - Djamila Ribeiro</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/9/9c/Pequeno_Manual_Antirracista.jpg/220px-Pequeno_Manual_Antirracista.jpg" alt="Pequeno Manual Antirracista">
+            <p>Um guia acessível e direto sobre a importância da luta antirracista e como cada um pode contribuir para um mundo mais justo.</p>
+        </div>
+        <div class="livro">
+            <h3>Tornar-se Negro - Neusa Santos Souza</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/7/78/Tornar-se_Negro.jpg/220px-Tornar-se_Negro.jpg" alt="Tornar-se Negro">
+            <p>Uma reflexão profunda sobre a construção da identidade negra no Brasil e os desafios enfrentados por essa população.</p>
+        </div>
+        <div class="livro">
+            <h3>Quarto de Despejo: Diário de uma Favelada - Carolina Maria de Jesus</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/4/49/Quarto_de_Despejo.jpg/220px-Quarto_de_Despejo.jpg" alt="Quarto de Despejo">
+            <p>Um relato autobiográfico que retrata a vida de uma mulher negra e sua luta por dignidade em meio à pobreza e desigualdade.</p>
+        </div>
+    </section>
+
     <footer>
-        <p>© 2024 Educação Antirracista</p>
+        <h2>Conclusão</h2>
+        <p>A educação antirracista é uma necessidade urgente em nossa sociedade. Promover essa educação é fundamental para a transformação social e para a construção de um futuro em que todos possam viver com dignidade e respeito. A luta antirracista deve ser coletiva e contínua, envolvendo não apenas os diretamente afetados, mas toda a sociedade.</p>
+        <p>© 2024 Site criado pelos alunos da 2 série A da E.E Pedro Paulo Gonçalves Lopes Professor.</p>
     </footer>
 </body>
 </html>
