--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
         </ul>
     </section>
 
+    <section class="historico-racismo">
+        <h2>História do Racismo no Brasil</h2>
+
+        <article>
+            <h3>Colonização e Escravidão</h3>
+            <p>A colonização do Brasil pelos portugueses resultou na exploração massiva de indígenas e na importação de africanos como escravizados. A escravidão foi um sistema brutal que perdurou por mais de 300 anos, moldando as relações sociais e raciais.</p>
+        </article>
+
+        <article>
+            <h3>Abolição da Escravatura</h3>
+            <p>Em 1888, a Lei Áurea aboliu a escravidão, mas os afrodescendentes continuaram a enfrentar discriminação e exclusão social. A abolição não trouxe as esperadas condições de igualdade.</p>
+        </article>
+
+        <article>
+            <h3>Movimentos Sociais</h3>
+            <p>A partir do século XX, movimentos sociais começaram a surgir, reivindicando direitos e igualdade para a população negra. O movimento negro ganhou força nas décadas de 1970 e 1980, lutando contra o racismo estrutural.</p>
+        </article>
+
+        <article>
+            <h3>Racismo Estrutural e Contemporâneo</h3>
+            <p>Hoje, o racismo estrutural ainda é uma realidade no Brasil, manifestando-se em desigualdades sociais, econômicas e políticas. É fundamental reconhecer e combater essas injustiças para construir uma sociedade mais equitativa.</p>
+        </article>
+    </section>
+
     <section class="povo-preto">
         <h2>Povo preto no poder</h2>
         <p>O povo preto tem uma longa história de resistência e conquistas. Desde a luta contra a escravidão até a atualidade, a presença e a contribuição dos afrodescendentes são fundamentais na construção da identidade brasileira. As vitórias no campo político, artístico e social são marcos que evidenciam a força e a resiliência dessa comunidade. Com a luta por igualdade, os negros têm conquistado espaços importantes em diversas áreas, rompendo barreiras e desafiando estereótipos. É crucial reconhecer e valorizar essas conquistas, que vão muito além da luta antirracista, mas que se entrelaçam com a busca por justiça social e direitos humanos.</p>
