--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Educação Antirracista</title>
 </head>
 <body>
@@ -35,16 +36,16 @@
     <section class="cuidado-palavras">
         <h2>Cuidado com as palavras</h2>
         <ul>
-            <li>Negro -> Afrodescendente</li>
-            <li>Mulato -> Mestiço</li>
-            <li>Preto -> Pessoa negra</li>
-            <li>Escravo -> Pessoa escravizada</li>
-            <li>Raça inferior -> Raça humana</li>
-            <li>Branquitude -> Privilegiado</li>
-            <li>Cor da pele -> Identidade racial</li>
-            <li>Estereótipos -> Generalizações</li>
-            <li>Segregação -> Inclusão</li>
-            <li>Racismo cultural -> Diversidade cultural</li>
+            <li><i class="fas fa-exchange-alt"></i> Negros -> Afrodescendentes</li>
+            <li><i class="fas fa-exchange-alt"></i> Mulatos -> Mestiços</li>
+            <li><i class="fas fa-exchange-alt"></i> Pretos -> Pessoas negras</li>
+            <li><i class="fas fa-exchange-alt"></i> Escravos -> Pessoas escravizadas</li>
+            <li><i class="fas fa-exchange-alt"></i> Raça inferior -> Raça humana</li>
+            <li><i class="fas fa-exchange-alt"></i> Branquitude -> Privilegiado</li>
+            <li><i class="fas fa-exchange-alt"></i> Cor da pele -> Identidade racial</li>
+            <li><i class="fas fa-exchange-alt"></i> Estereótipos -> Generalizações</li>
+            <li><i class="fas fa-exchange-alt"></i> Segregação -> Inclusão</li>
+            <li><i class="fas fa-exchange-alt"></i> Racismo cultural -> Diversidade cultural</li>
         </ul>
     </section>
 
