--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Educação Antirracista</title>
 </head>
@@ -15,13 +16,13 @@
 
     <section class="resumo">
         <h2>Resumo</h2>
-        <p>A luta antirracista é fundamental para a construção de uma sociedade mais justa e igualitária. Educar-se sobre racismo e suas manifestações é um passo primordial para desconstruir preconceitos e promover a inclusão. O racismo não é apenas uma questão individual, mas uma estrutura enraizada que demanda ações coletivas e conscientes. Nesse contexto, a educação antirracista se apresenta como uma ferramenta poderosa para transformar mentalidades e promover a equidade racial.</p>
+        <p>A luta antirracista é fundamental para a construção de uma sociedade mais justa e igualitária. Educar-se sobre racismo e suas manifestações é um passo primordial para desconstruir preconceitos e promover a inclusão.</p>
     </section>
 
     <section class="video-principal">
         <h2>Assista ao vídeo</h2>
         <iframe src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
-        <p>Este vídeo aborda a importância da educação antirracista e os impactos positivos que ela pode ter na sociedade. Através de relatos e discussões, somos convidados a refletir sobre nossas próprias atitudes e a necessidade de promover mudanças efetivas.</p>
+        <p>Este vídeo aborda a importância da educação antirracista e os impactos positivos que ela pode ter na sociedade.</p>
     </section>
 
     <section class="video-secundarios">
@@ -51,55 +52,38 @@
 
     <section class="historico-racismo">
         <h2>História do Racismo no Brasil</h2>
-
         <article>
             <h3>Colonização e Escravidão</h3>
-            <p>A colonização do Brasil pelos portugueses resultou na exploração massiva de indígenas e na importação de africanos como escravizados. A escravidão foi um sistema brutal que perdurou por mais de 300 anos, moldando as relações sociais e raciais.</p>
-        </article>
-
-        <article>
-            <h3>Abolição da Escravatura</h3>
-            <p>Em 1888, a Lei Áurea aboliu a escravidão, mas os afrodescendentes continuaram a enfrentar discriminação e exclusão social. A abolição não trouxe as esperadas condições de igualdade.</p>
-        </article>
-
-        <article>
-            <h3>Movimentos Sociais</h3>
-            <p>A partir do século XX, movimentos sociais começaram a surgir, reivindicando direitos e igualdade para a população negra. O movimento negro ganhou força nas décadas de 1970 e 1980, lutando contra o racismo estrutural.</p>
-        </article>
-
-        <article>
-            <h3>Racismo Estrutural e Contemporâneo</h3>
-            <p>Hoje, o racismo estrutural ainda é uma realidade no Brasil, manifestando-se em desigualdades sociais, econômicas e políticas. É fundamental reconhecer e combater essas injustiças para construir uma sociedade mais equitativa.</p>
+            <p>A colonização do Brasil pelos portugueses resultou na exploração massiva de indígenas e na importação de africanos como escravizados.</p>
         </article>
     </section>
 
     <section class="povo-preto">
         <h2>Povo preto no poder</h2>
-        <p>O povo preto tem uma longa história de resistência e conquistas. Desde a luta contra a escravidão até a atualidade, a presença e a contribuição dos afrodescendentes são fundamentais na construção da identidade brasileira. As vitórias no campo político, artístico e social são marcos que evidenciam a força e a resiliência dessa comunidade. Com a luta por igualdade, os negros têm conquistado espaços importantes em diversas áreas, rompendo barreiras e desafiando estereótipos. É crucial reconhecer e valorizar essas conquistas, que vão muito além da luta antirracista, mas que se entrelaçam com a busca por justiça social e direitos humanos.</p>
+        <p>O povo preto tem uma longa história de resistência e conquistas. Desde a luta contra a escravidão até a atualidade, a presença e a contribuição dos afrodescendentes são fundamentais na construção da identidade brasileira.</p>
     </section>
 
     <section class="livros">
         <h2>Expanda seu conhecimento</h2>
         <div class="livro">
-            <h3>Pequeno Manual Antirracista - Djamila Ribeiro</h3>
+            <h3>Pequeno Manual Antirracista</h3>
             <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/9/9c/Pequeno_Manual_Antirracista.jpg/220px-Pequeno_Manual_Antirracista.jpg" alt="Pequeno Manual Antirracista">
-            <p>Um guia acessível e direto sobre a importância da luta antirracista e como cada um pode contribuir para um mundo mais justo.</p>
+            <p>Um guia acessível e direto sobre a importância da luta antirracista.</p>
         </div>
-        <div class="livro">
-            <h3>Tornar-se Negro - Neusa Santos Souza</h3>
-            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/7/78/Tornar-se_Negro.jpg/220px-Tornar-se_Negro.jpg" alt="Tornar-se Negro">
-            <p>Uma reflexão profunda sobre a construção da identidade negra no Brasil e os desafios enfrentados por essa população.</p>
-        </div>
-        <div class="livro">
-            <h3>Quarto de Despejo: Diário de uma Favelada - Carolina Maria de Jesus</h3>
-            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/4/49/Quarto_de_Despejo.jpg/220px-Quarto_de_Despejo.jpg" alt="Quarto de Despejo">
-            <p>Um relato autobiográfico que retrata a vida de uma mulher negra e sua luta por dignidade em meio à pobreza e desigualdade.</p>
+    </section>
+
+    <section class="social-media">
+        <h2>Conecte-se com a gente!</h2>
+        <p>Siga-nos nas redes sociais:</p>
+        <div>
+            <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="#"><i class="fab fa-tiktok"></i> TikTok</a>
         </div>
     </section>
 
     <footer>
         <h2>Conclusão</h2>
-        <p>A educação antirracista é uma necessidade urgente em nossa sociedade. Promover essa educação é fundamental para a transformação social e para a construção de um futuro em que todos possam viver com dignidade e respeito. A luta antirracista deve ser coletiva e contínua, envolvendo não apenas os diretamente afetados, mas toda a sociedade.</p>
+        <p>A educação antirracista é uma necessidade urgente em nossa sociedade. Promover essa educação é fundamental para a transformação social.</p>
         <p>© 2024 Site criado pelos alunos da 2 série A da E.E Pedro Paulo Gonçalves Lopes Professor.</p>
     </footer>
 </body>
