--- a/index.html
+++ b/index.html
@@ -12,67 +12,78 @@
 <body>
     <header>
         <h1>Numa sociedade racista, não basta não ser racista. É necessário ser antirracista</h1>
+        <nav>
+            <ul>
+                <li><a href="#resumo">Resumo</a></li>
+                <li><a href="#video-principal">Vídeo Principal</a></li>
+                <li><a href="#musicas">Músicas e Artistas</a></li>
+                <li><a href="#criatividade">Espaço Criativo</a></li>
+                <li><a href="#historico">História do Racismo</a></li>
+                <li><a href="#depoimentos">Histórias de Superação</a></li>
+                <li><a href="#social-media">Conecte-se</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section class="resumo">
+    <section id="resumo" class="resumo">
         <h2>Resumo</h2>
-        <p>A luta antirracista é fundamental para a construção de uma sociedade mais justa e igualitária. Educar-se sobre racismo e suas manifestações é um passo primordial para desconstruir preconceitos e promover a inclusão.</p>
+        <p>A luta antirracista é fundamental para a construção de uma sociedade mais justa. Educar-se sobre racismo é essencial para desconstruir preconceitos.</p>
     </section>
 
-    <section class="video-principal">
-        <h2>Assista ao vídeo</h2>
+    <section id="video-principal" class="video-principal">
+        <h2>Assista ao Vídeo</h2>
         <iframe src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
-        <p>Este vídeo aborda a importância da educação antirracista e os impactos positivos que ela pode ter na sociedade.</p>
+        <p>Este vídeo aborda a importância da educação antirracista e seus impactos positivos.</p>
     </section>
 
-    <section class="video-secundarios">
-        <h2>Fique por dentro</h2>
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
-            <iframe src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </section>
-
-    <section class="cuidado-palavras">
-        <h2>Cuidado com as palavras</h2>
+    <section id="musicas" class="musicas">
+        <h2>Músicas e Artistas</h2>
+        <p>Confira nossas playlists e artistas que falam sobre a luta antirracista.</p>
         <ul>
-            <li><i class="fas fa-exchange-alt"></i> Negros -> Afrodescendentes</li>
-            <li><i class="fas fa-exchange-alt"></i> Mulatos -> Mestiços</li>
-            <li><i class="fas fa-exchange-alt"></i> Pretos -> Pessoas negras</li>
-            <li><i class="fas fa-exchange-alt"></i> Escravos -> Pessoas escravizadas</li>
-            <li><i class="fas fa-exchange-alt"></i> Raça inferior -> Raça humana</li>
-            <li><i class="fas fa-exchange-alt"></i> Branquitude -> Privilegiado</li>
-            <li><i class="fas fa-exchange-alt"></i> Cor da pele -> Identidade racial</li>
-            <li><i class="fas fa-exchange-alt"></i> Estereótipos -> Generalizações</li>
-            <li><i class="fas fa-exchange-alt"></i> Segregação -> Inclusão</li>
-            <li><i class="fas fa-exchange-alt"></i> Racismo cultural -> Diversidade cultural</li>
+            <li><strong>Racionais MC's</strong> - "Da Ponte pra Cá"</li>
+            <li><strong>Karol Conka</strong> - "Tombei"</li>
+            <li><strong>Emicida</strong> - "A Gente Fala"</li>
         </ul>
     </section>
 
-    <section class="historico-racismo">
+    <section id="criatividade" class="criatividade">
+        <h2>Espaço Criativo</h2>
+        <p>Envie sua arte ou poesia e mostre sua voz!</p>
+        <div class="galeria">
+            <h3>Galeria de Arte</h3>
+            <p>Suas obras aqui!</p>
+            <!-- Aqui podem ser inseridas imagens enviadas pelos usuários -->
+        </div>
+        <div class="poesias">
+            <h3>Poesias</h3>
+            <p>Compartilhe suas letras e poesias sobre a luta antirracista.</p>
+            <!-- Aqui podem ser inseridas poesias enviadas pelos usuários -->
+        </div>
+    </section>
+
+    <section id="historico" class="historico-racismo">
         <h2>História do Racismo no Brasil</h2>
         <article>
             <h3>Colonização e Escravidão</h3>
             <p>A colonização do Brasil pelos portugueses resultou na exploração massiva de indígenas e na importação de africanos como escravizados.</p>
         </article>
+        <article>
+            <h3>Abolição da Escravatura</h3>
+            <p>Em 1888, a Lei Áurea aboliu a escravidão, mas os afrodescendentes continuaram a enfrentar discriminação.</p>
+        </article>
     </section>
 
-    <section class="povo-preto">
-        <h2>Povo preto no poder</h2>
-        <p>O povo preto tem uma longa história de resistência e conquistas. Desde a luta contra a escravidão até a atualidade, a presença e a contribuição dos afrodescendentes são fundamentais na construção da identidade brasileira.</p>
-    </section>
-
-    <section class="livros">
-        <h2>Expanda seu conhecimento</h2>
-        <div class="livro">
-            <h3>Pequeno Manual Antirracista</h3>
-            <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/9/9c/Pequeno_Manual_Antirracista.jpg/220px-Pequeno_Manual_Antirracista.jpg" alt="Pequeno Manual Antirracista">
-            <p>Um guia acessível e direto sobre a importância da luta antirracista.</p>
+    <section id="depoimentos" class="depoimentos">
+        <h2>Histórias de Superação</h2>
+        <p>Conheça jovens que superaram desafios relacionados ao racismo.</p>
+        <div class="testemunhos">
+            <h3>Depoimentos Inspiradores</h3>
+            <p><em>"A luta não é só minha, mas de todos nós."</em> - Jovem ativista</p>
+            <p><em>"Consegui mudar minha realidade através da educação."</em> - Estudante</p>
         </div>
     </section>
 
-    <section class="social-media">
+    <section id="social-media" class="social-media">
         <h2>Conecte-se com a gente!</h2>
         <p>Siga-nos nas redes sociais:</p>
         <div>
@@ -83,7 +94,7 @@
 
     <footer>
         <h2>Conclusão</h2>
-        <p>A educação antirracista é uma necessidade urgente em nossa sociedade. Promover essa educação é fundamental para a transformação social.</p>
+        <p>A educação antirracista é uma necessidade urgente. Promover essa educação é fundamental para a transformação social.</p>
         <p>© 2024 Site criado pelos alunos da 2 série A da E.E Pedro Paulo Gonçalves Lopes Professor.</p>
     </footer>
 </body>
