--- a/index.html
+++ b/index.html
@@ -14,72 +14,80 @@
         <h1>Numa sociedade racista, não basta não ser racista. É necessário ser antirracista</h1>
         <nav>
             <ul>
-                <li><a href="#resumo">Resumo</a></li>
-                <li><a href="#video-principal">Vídeo Principal</a></li>
-                <li><a href="#musicas">Músicas e Artistas</a></li>
-                <li><a href="#criatividade">Espaço Criativo</a></li>
-                <li><a href="#historico">História do Racismo</a></li>
-                <li><a href="#depoimentos">Histórias de Superação</a></li>
+                <li><a href="#videos">Vídeos</a></li>
+                <li><a href="#termos">Termos Racistas</a></li>
+                <li><a href="#livros">Livros Recomendados</a></li>
+                <li><a href="#musicas">Músicas sobre a Causa</a></li>
+                <li><a href="#jogos">Aprendizado Lúdico</a></li>
                 <li><a href="#social-media">Conecte-se</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="resumo" class="resumo">
-        <h2>Resumo</h2>
-        <p>A luta antirracista é fundamental para a construção de uma sociedade mais justa. Educar-se sobre racismo é essencial para desconstruir preconceitos.</p>
+    <section id="videos" class="videos">
+        <h2>Vídeos Educativos</h2>
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Ia3NrSoTSXk" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/E_BjYPOE3ag" frameborder="0" allowfullscreen></iframe>
+        </div>
     </section>
 
-    <section id="video-principal" class="video-principal">
-        <h2>Assista ao Vídeo</h2>
-        <iframe src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
-        <p>Este vídeo aborda a importância da educação antirracista e seus impactos positivos.</p>
+    <section id="termos" class="termos">
+        <h2>Termos Racistas e suas Alternativas</h2>
+        <ul>
+            <li><strong>Negros</strong> → Afrodescendentes</li>
+            <li><strong>Mulatos</strong> → Mestiços</li>
+            <li><strong>Pretos</strong> → Pessoas negras</li>
+            <li><strong>Escravos</strong> → Pessoas escravizadas</li>
+            <li><strong>Raça inferior</strong> → Raça humana</li>
+            <li><strong>Branquitude</strong> → Privilegiado</li>
+            <li><strong>Cor da pele</strong> → Identidade racial</li>
+            <li><strong>Estereótipos</strong> → Generalizações</li>
+            <li><strong>Segregação</strong> → Inclusão</li>
+            <li><strong>Racismo cultural</strong> → Diversidade cultural</li>
+        </ul>
+    </section>
+
+    <section id="livros" class="livros">
+        <h2>Livros Recomendados</h2>
+        <ul>
+            <li><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</li>
+            <li><strong>O que é Racismo</strong> - Silvio Almeida</li>
+            <li><strong>Racismo Estrutural</strong> - Silvio Almeida</li>
+            <li><strong>O Negro no Brasil</strong> - Alberto da Costa e Silva</li>
+            <li><strong>As Veias Abertas da América Latina</strong> - Eduardo Galeano</li>
+            <li><strong>O que é Racismo Institucional</strong> - Marilena Chauí</li>
+            <li><strong>Quem tem medo do feminismo negro?</strong> - Djamila Ribeiro</li>
+            <li><strong>Política e Racismo</strong> - João Costa Vargas</li>
+            <li><strong>Na Minha Pele</strong> - Lázaro Ramos</li>
+            <li><strong>História da África</strong> - José Carlos de Almeida</li>
+        </ul>
     </section>
 
     <section id="musicas" class="musicas">
-        <h2>Músicas e Artistas</h2>
-        <p>Confira nossas playlists e artistas que falam sobre a luta antirracista.</p>
+        <h2>Músicas sobre a Causa</h2>
         <ul>
             <li><strong>Racionais MC's</strong> - "Da Ponte pra Cá"</li>
             <li><strong>Karol Conka</strong> - "Tombei"</li>
             <li><strong>Emicida</strong> - "A Gente Fala"</li>
+            <li><strong>MV Bill</strong> - "Soldado do Morro"</li>
+            <li><strong>Filipe Ret</strong> - "Poesia Acústica 2"</li>
+            <li><strong>Black Alien</strong> - "O Mundo é o Meu Lugar"</li>
+            <li><strong>Djonga</strong> - "Olho de Tigre"</li>
+            <li><strong>Flora Matos</strong> - "Ela é do Tipo"</li>
+            <li><strong>Projota</strong> - "Numa Nuvem"</li>
+            <li><strong>Fresno</strong> - "O que eu não sei"</li>
         </ul>
     </section>
 
-    <section id="criatividade" class="criatividade">
-        <h2>Espaço Criativo</h2>
-        <p>Envie sua arte ou poesia e mostre sua voz!</p>
-        <div class="galeria">
-            <h3>Galeria de Arte</h3>
-            <p>Suas obras aqui!</p>
-            <!-- Aqui podem ser inseridas imagens enviadas pelos usuários -->
-        </div>
-        <div class="poesias">
-            <h3>Poesias</h3>
-            <p>Compartilhe suas letras e poesias sobre a luta antirracista.</p>
-            <!-- Aqui podem ser inseridas poesias enviadas pelos usuários -->
-        </div>
-    </section>
-
-    <section id="historico" class="historico-racismo">
-        <h2>História do Racismo no Brasil</h2>
-        <article>
-            <h3>Colonização e Escravidão</h3>
-            <p>A colonização do Brasil pelos portugueses resultou na exploração massiva de indígenas e na importação de africanos como escravizados.</p>
-        </article>
-        <article>
-            <h3>Abolição da Escravatura</h3>
-            <p>Em 1888, a Lei Áurea aboliu a escravidão, mas os afrodescendentes continuaram a enfrentar discriminação.</p>
-        </article>
-    </section>
-
-    <section id="depoimentos" class="depoimentos">
-        <h2>Histórias de Superação</h2>
-        <p>Conheça jovens que superaram desafios relacionados ao racismo.</p>
-        <div class="testemunhos">
-            <h3>Depoimentos Inspiradores</h3>
-            <p><em>"A luta não é só minha, mas de todos nós."</em> - Jovem ativista</p>
-            <p><em>"Consegui mudar minha realidade através da educação."</em> - Estudante</p>
+    <section id="jogos" class="jogos">
+        <h2>Aprendizado Lúdico</h2>
+        <p>Explore jogos e quizzes interativos que ensinam sobre racismo e diversidade.</p>
+        <div class="game-links">
+            <a href="#" class="game-link">Quiz sobre Racismo</a>
+            <a href="#" class="game-link">Jogo da Memória Antirracista</a>
         </div>
     </section>
 
