--- a/index.html
+++ b/index.html
@@ -86,8 +86,22 @@
         <h2>Aprendizado Lúdico</h2>
         <p>Explore jogos e quizzes interativos que ensinam sobre racismo e diversidade.</p>
         <div class="game-links">
-            <a href="#" class="game-link">Quiz sobre Racismo</a>
-            <a href="#" class="game-link">Jogo da Memória Antirracista</a>
+            <a href="https://www.education.com/game/learning/antiracism-quiz/" class="game-link" target="_blank">Quiz sobre Racismo</a>
+            <a href="https://www.unicef.org/education/anti-racism-education" class="game-link" target="_blank">Jogo da Memória Antirracista</a>
+        </div>
+    </section>
+
+    <section class="importancia">
+        <h2>A Importância do Antirracismo</h2>
+        <p>O antirracismo é uma luta essencial para a construção de uma sociedade justa e igualitária. Ele nos ensina a reconhecer e combater as desigualdades raciais que permeiam nossas instituições e relações sociais. A educação antirracista promove a empatia, a inclusão e a valorização da diversidade, fundamentais para o desenvolvimento de uma comunidade coesa e solidária.</p>
+    </section>
+
+    <section id="fotos" class="fotos">
+        <h2>Imagens Inspiradoras</h2>
+        <div class="image-container">
+            <img src="https://via.placeholder.com/300x200.png?text=Arte+Urbana" alt="Arte Urbana">
+            <img src="https://via.placeholder.com/300x200.png?text=Diversidade" alt="Diversidade">
+            <img src="https://via.placeholder.com/300x200.png?text=Luta+Antirracista" alt="Luta Antirracista">
         </div>
     </section>
 
