--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
         <ul>
             <li><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</li>
             <li><strong>O que é Racismo</strong> - Silvio Almeida</li>
-            <li><strong>Racismo Estrutural</strong> - Silvio Almeida</li>
             <li><strong>O Negro no Brasil</strong> - Alberto da Costa e Silva</li>
             <li><strong>As Veias Abertas da América Latina</strong> - Eduardo Galeano</li>
             <li><strong>O que é Racismo Institucional</strong> - Marilena Chauí</li>
@@ -88,6 +87,14 @@
         <div class="game-links">
             <a href="https://www.education.com/game/learning/antiracism-quiz/" class="game-link" target="_blank">Quiz sobre Racismo</a>
             <a href="https://www.unicef.org/education/anti-racism-education" class="game-link" target="_blank">Jogo da Memória Antirracista</a>
+            <a href="https://kahoot.com/" class="game-link" target="_blank">Quiz de Conhecimentos sobre Racismo</a>
+            <a href="https://www.memozor.com/memory-game-maker" class="game-link" target="_blank">Jogo da Memória</a>
+            <a href="https://wordwall.net/" class="game-link" target="_blank">Atividade de Montagem de Frases</a>
+            <a href="https://socrative.com/" class="game-link" target="_blank">Jogo de Adivinhação de Personalidades</a>
+            <a href="https://aggie.io/" class="game-link" target="_blank">Desenho Colaborativo</a>
+            <a href="https://puzzlemaker.discoveryeducation.com/" class="game-link" target="_blank">Caça-Palavras Antirracista</a>
+            <a href="https://store.steampowered.com/app/286160/Tabletop_Simulator/" class="game-link" target="_blank">Jogo de Role-Playing (RPG)</a>
+            <a href="https://www.debate.org/" class="game-link" target="_blank">Simulações de Debates</a>
         </div>
     </section>
 
